0.10.0 (currently working on)
- [#4957] Feature: Add wrappers for the FE user data on the first registration page
- [#4940] Bugfix: Label for fe_user.telephone missing in the CSV export
- [#4941] Feature: Add a CSV label for attendances.crdate
- [#4952] Feature: Add "sep" marker to the CSV
- [#4950] Feature: Add the interests to the thank-you e-mail
- [#4946] Cleanup: Add and use seminar::getFirstOrganizer
- [#4948] Bugfix: Drop the colon after the labels on the confirmation page
- [#4947] Bugfix: Foods and lodgings are missing on the confirmation page
- [#4929] Feature: Add the fields "food" and "accommodation" to the thank-you e-mail
- [#4938] Change: Use labels for all billing address fields on the confirmation page
- [#4924] Feature: Make the sort order of the registration items on the confirmnation page changeable
- [#4923] Feature: Make the labels on the confirmation page changeable
- [#4889] Feature: Make the CSV classes extensible
- [#4863] Cleanup: Clean up the CSV class
- [#4648] Cleanup: Drop some early __destruct calls
- [#4935] Bugfix: Drop the colon after the payment method in the e-mail to the attendee
- [#4300] Feature: Make the FE user data in the registration form configurable (thanks to Philipp Kitzberger)
- [#4928] Feature: Allow adding arbitrary FE user fields into the notification e-mail to the organizer
- [#4896] Feature: Add a test for new attendance fields in the e-mail to the organizer
- [#4888] Feature: Add a hook for modifying the thank-you e-mail texts
- [#4886] Feature: Add a hook for saving additional fields in the registration form
- [#4919] Feature: Make the fields on the confirmation page extensible
- [#4909] Cleanup: Drop the constant for the type number for the publication plugin
- [#4908] Cleanup: Drop plugin.tx_seminars.allowAccessToCsv
- [#4907] Cleanup: Make OldModel_Abstract::recordExists static
- [#4878] Fix: tx_seminars_Interface_Hook_Registration is missing in ext_autoload.php